[package]
name = "blooemu"
version = "0.1.8"
edition = "2021"
description = "the best library for OS API's manipulation"
license = "MIT"
authors = ["INF - Faynot faynotdev@gmail.com", "TGC of Faynot - @iilovesoll", "TGC of INF(EN) - @infpublic", "TGC of INF(RU) - @infpublicru"]

[lib]
crate-type = ["lib"]

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "tlhelp32", "handleapi", "processthreadsapi", "psapi", "winnt", "minwindef", "securitybaseapi", "privileges"] }
notify-rust = "4.5"
cfg-if = "1.0"
