[package]
name = "blooemu"
version = "0.1.9"
edition = "2021"
description = "the best library for OS API's manipulation"
license = "MIT"
authors = ["INF - Faynot faynotdev@gmail.com", "TGC of Faynot - @iilovesoll", "TGC of INF(EN) - @infpublic", "TGC of INF(RU) - @infpublicru"]

[lib]
crate-type = ["lib"]

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "tlhelp32", "handleapi", "processthreadsapi", "psapi", "winnt", "minwindef", "securitybaseapi", "errhandlingapi", "winbase", "handleapi"] }
notify-rust = "4.5"
cfg-if = "1.0"
nix = "0.29.0"
libc = "0.2.159"
